# math_bot

./: .dockerignore  .env.example  .gitignore  ACCEPTANCE_CHECKLIST.md  Dockerfile  IMPLEMENTATION_NOTES.md  NUMERAL_SYSTEMS_ACCEPTANCE_CHECKLIST.md  README.md  TOPIC_DEVELOPMENT_GUIDE.md  alembic.ini  docker-compose.yml  instructions.md  numeral_systems.md  pyproject.toml
app/: __init__.py  bot.py  config.py  logging.py  main.py
app/content/: __init__.py  loader.py
app/content/core/: strings.yaml
app/core/: __init__.py
app/core/mastery/: __init__.py  engine.py  intervals.py  selection.py
app/core/questions/: __init__.py  answer_modes.py  callbacks.py
app/core/topics/: __init__.py  contracts.py  registry.py  validation.py
app/database/: base.py  models.py  session.py
app/handlers/: __init__.py  admin.py  common.py  daily.py  learning.py  menu.py  practice.py  privacy.py  progress.py  questions.py  settings.py  start.py  tests.py
app/keyboards/: common.py  questions.py
app/services/: answers.py  daily.py  invitations.py  privacy.py  reminders.py  sessions.py  statistics.py  users.py
app/topics/: __init__.py
app/topics/numeral_systems/: __init__.py  images.py  module.py  question_generator.py  skills.py
app/workers/: daily_questions.py
migrations/: env.py
migrations/versions/: 20260716_0001_initial.py
scripts/: generate_times_table_images.py  validate_content.py  validate_topics.py
tests/: conftest.py  sample_topic.py  test_app_helpers.py  test_core.py  test_handlers.py  test_integration.py  test_numeral_systems.py  test_times_tables.py
(+8 files in other folders)
