[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "times-table-bot"
version = "1.0.0"
description = "A modular Telegram mathematics practice bot"
requires-python = ">=3.14,<3.15"
dependencies = [
  "aiogram==3.29.1",
  "alembic==1.18.5",
  "asyncpg==0.31.0",
  "greenlet==3.5.3",
  "Pillow==12.3.0",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "PyYAML==6.0.3",
  "SQLAlchemy==2.0.51",
]

[project.optional-dependencies]
dev = [
  "mypy==2.3.0",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "pytest-cov==7.1.0",
  "ruff==0.15.22",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=75"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["migrations"]

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true
